<resources>
    <string name="app_name">CompteCible</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="config_round">Config round</string>
    <string name="activity_maintenance">Maintenance</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ClearDataBase">Clear DataBase</string>
    <string name="let_sgo">let\'s GO</string>
    <string name="useButton">Use button</string>
    <string name="roundName">round Name</string>
    <string name="round">round</string>
    <string name="Activity_resultat_round">results Round</string>
    <string name="configFill">You must fill all Item !</string>
    <string name="impact">impact</string>
    <string name="repartitionPoint">distribution arrow</string>
    <string name="air_TitleGraphe_arrow_by_arrow">Number arrow by Value</string>
    <string name="air_Tittle_Axe_Y">Number of arrow</string>
    <string name="air_Tittle_Axe_X">Value of arrow</string>
    <string name="air_select_rounds">archer result</string>
    <string name="air_select_round">round result</string>
    <string name="air_TitleGraphe_rounsd">Score by round</string>
    <string name="air_Tittle_Axe_X_round">round Name</string>
    <string name="air_Tittle_Axe_Y_Score">score</string>
    <string name="EndRound">End round</string>
    <string name="End">End</string>
    <string name="missing_archer">missing archer</string>
    <string name="noElement">No element</string>
    <string name="All">all</string>
    <string name="addArcher">Add archer</string>
    <string name="ArcherToRound">Archer to round</string>
    <string name="Noelement">"No element found : "</string>
    <string name="am_bexport_archer_round">export archer rounds</string>
    <string name="baseClean">Clean Database</string>
    <string name="baseAlertClean">Are you sure to delete </string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="archer_base">archer in base</string>
    <string name="acr_arrowByEnd">Arrow by End</string>
    <string name="acr_EndByRound">End by round</string>
    <string name="am_bManque">Manque</string>
    <string name="am_bAnnul">Annul</string>
    <string name="am_bexport_round_archers">Export round archers</string>
    <string name="am_bexport_round_archer">Export round archer</string>
    <string name="name_archer">archer\'s name</string>
    <string name="Apropos">Documentation</string>
    <string name="Concours">Round</string>
    <string name="archer">archer</string>
    <string name="arrow">Arrow</string>
    <string name="circle_of_success">circle of success</string>
    <string name="Exit">exit</string>
    <string name="me">Me</string>
    <string name="note">note</string>
    <string name="archers">archers</string>
    <string name="archersNotes">Notes of archers</string>
    <string name="RoundQualifier">tag</string>
    <string name="resRoundFilter">filter</string>
    <string name="pointageOffset">Offset Value</string>
    <string name="pointageOffsetDesc">"pointing offset value "</string>
    <string name="archerClean">"delete archer "</string>
    <string name="roundClean">"round suppress "</string>
    <string name="Plus10">+</string>
    <string name="archer_bow">archer bow</string>
    <string name="air_select_round_graphic">graphic round result</string>
    <string name="bp_cancel">Cancel</string>
    <string name="bp_valid">valid</string>
    <string name="bp_clear_filter">clear filter</string>
    <string name="gf_dia_input_empty">empty filter</string>
    <string name="gf_dia_addsubject">add a new value</string>
    <string name="gf_dia_tittle_addsubject">your new filter value</string>
    <string name="gf_toAdd">new filter</string>
    <string name="bp_delete">delete</string>
    <string name="gf_dia_template">Gestion template</string>
    <string name="gf_dia_sup_template">do you want suppress this filter</string>
    <string name="ar_filter_round">Filter  round by</string>
    <string name="ar_filter_or">or</string>
    <string name="ar_filter_archer">Select archer</string>
    <string name="ar_text_select_round">Select round</string>
    <string name="pasRun">no  result run with filter</string>
    <string name="black">black</string>
    <string name="yellow">yellow</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="filter">filter</string>
    <string name="gf_no_filter">No filter click to add</string>
    <string name="gf_no_tag">no tag</string>
    <string name="nameArrow">named arrow</string>
    <string name="arrowName1">arrow one</string>
    <string name="arrowName2">arrow two</string>
    <string name="arrowName3">arrow three</string>
    <string name="arrowName4">arrow four</string>
    <string name="arrowName5">arrow five</string>
    <string name="arrowName6">arrow six</string>
    <string name="arrowNameDefault">arrow Default</string>
    <string name="arrowNameStart">arrow Default</string>

    <string name="tittleChoiceArrow">select arrow number</string>


</resources>
