<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.herault.comptecible.Activity_MainActivity">
    <item
        android:id="@+id/config_round"
        android:orderInCategory="100"
        android:title="@string/config_round"
        app:showAsAction="never" />
    <item
        android:id="@+id/maintenance"
        android:orderInCategory="101"
        android:title="@string/activity_maintenance"
        app:showAsAction="never" />
    <item
        android:id="@+id/resultat_round"
        android:orderInCategory="102"
        android:title="@string/Activity_resultat_round"
        app:showAsAction="never" />
    <item
        android:id="@+id/apropos"
        android:orderInCategory="103"
        android:title="@string/Apropos"
        app:showAsAction="never" />
</menu>
