<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_gestion_filter">

    <GridView
        android:id="@+id/gridChoice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_weight="10"
        android:columnWidth="80dp"
        android:gravity="center"
        android:horizontalSpacing="15dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="20dp"

        app:layout_constraintBottom_toTopOf="@id/gf_gb_checkColor"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/gf_gb_checkColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/filterResult"
        app:layout_constraintStart_toEndOf="@id/gridChoice"
        app:layout_constraintTop_toBottomOf="@id/gridChoice">

        <RadioButton
            android:id="@+id/gf_rb_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/blue"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/gf_rb_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/red"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/gf_rb_yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/yellow"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/gf_rb_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/black"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RadioGroup>

    <GridView
        android:id="@+id/filterResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="3"
        android:text="@string/filter"
        android:textSize="16sp"
        android:orientation="horizontal"
        android:columnWidth="80dp"
        android:gravity="center"
        android:horizontalSpacing="15dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="20dp"
        app:layout_constraintBottom_toTopOf="@id/buttom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gridChoice"
        app:layout_goneMarginBottom="10dp"
/>

    <LinearLayout
        android:id="@+id/buttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterResult">

        <Button
            android:id="@+id/gf_bp_clear_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bp_clear_filter"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/gf_bp_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bp_cancel"
            app:layout_constraintLeft_toRightOf="@id/gf_bp_clear_filter"
            app:layout_constraintTop_toTopOf="@+id/gf_bp_clear_filter" />

        <Button
            android:id="@+id/gf_bp_valid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bp_valid"
            app:layout_constraintLeft_toRightOf="@id/gf_bp_cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gf_bp_cancel" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>