<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_resultat_round">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textFilterRound"
        android:text="@string/ar_filter_round"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/res_round_filter" />

        <GridView
        android:id="@+id/res_round_filter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/it_style"
        android:layout_weight="1.5"
        android:ems="10"
        android:hint="@string/resRoundFilter"

            android:layout_marginTop="4dp"
            android:columnWidth="60dp"
            android:gravity="center"
            android:horizontalSpacing="5dp"
            android:numColumns="4"
            android:verticalSpacing="2dp"



            app:layout_constraintStart_toEndOf="@id/textFilterRound"
            app:layout_constraintTop_toBottomOf="@id/textFilterRound"
            app:layout_constraintEnd_toStartOf="@id/textSelectRound"  />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSelectRound"
        android:text="@string/ar_text_select_round"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toEndOf="@id/res_round_filter"
        app:layout_constraintEnd_toStartOf="@id/res_spinner_round" />

    <Spinner
        android:id="@+id/res_spinner_round"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="@drawable/it_style_spinner"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@id/textFilterOr"
        app:layout_constraintStart_toEndOf="@id/textSelectRound"
        app:layout_constraintBottom_toTopOf="@id/textFilterOr" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textFilterOr"
        android:gravity="center"
        android:text="@string/ar_filter_or"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toEndOf="@id/res_spinner_round"
        app:layout_constraintEnd_toStartOf="@id/textFilterByArcher" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textFilterByArcher"
        android:gravity="right"
        android:text="@string/ar_filter_archer"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toEndOf="@id/textFilterOr"
        app:layout_constraintEnd_toStartOf="@id/res_spinner_archer" />
    <Spinner
        android:id="@+id/res_spinner_archer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusedByDefault="true"
        android:layout_weight="1"
        android:background="@drawable/it_style_spinner"
        app:layout_constraintStart_toEndOf="@id/textFilterByArcher"
        app:layout_constraintTop_toBottomOf="@id/textFilterByArcher"
        app:layout_constraintEnd_toStartOf= "@id/res_lis_resultat"/>

    <ListView
        android:id="@+id/res_lis_resultat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_weight="8"
        android:background="@drawable/it_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/res_spinner_archer"
        app:layout_constraintTop_toBottomOf="@+id/res_spinner_archer" />


</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>