<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_maintenance">


    <Button
        android:id="@+id/am_bCleaDataBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/am_buttonshape_red"
        android:text="@string/ClearDataBase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="center"

        app:layout_constraintStart_toStartOf="@id/am_bCleaDataBase"
        app:layout_constraintTop_toBottomOf="@id/am_bCleaDataBase"
        app:layout_constraintVertical_bias="0.0">


        <TableRow
            android:id="@+id/table_am_bSuppresArcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toTopOf="@id/table"
            app:layout_constraintBottom_toTopOf="@id/table_am_bSup_round"
            >

            <Button
                android:id="@+id/am_bSuppresArcher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:background="@drawable/am_buttonshape_sup_archer"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:text="archer" />

            <Spinner
                android:id="@+id/am_sArcher"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/it_style"
                app:layout_constraintStart_toEndOf="@id/am_bSuppresArcher"
                app:layout_constraintTop_toTopOf="@id/am_bSuppresArcher" />
        </TableRow>

        <TableRow
            android:id="@+id/table_am_bSup_round"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/table_am_bSuppresArcher"
            app:layout_constraintBottom_toTopOf="@id/table_am_pointage_offset"
            >

            <Button
                android:id="@+id/am_bSup_round"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/am_buttonshape_sup_round"
                app:layout_constraintDimensionRatio="1.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:text="@string/round" />

            <Spinner
                android:id="@+id/sRound"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/it_style"
                app:layout_constraintStart_toEndOf="@id/am_bSup_round"
                app:layout_constraintTop_toTopOf="@id/am_bSup_round" />
        </TableRow>


        <TableRow
            android:id="@+id/table_am_pointage_offset"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/table_am_bSup_round"
            app:layout_constraintBottom_toTopOf="@id/table_am_bexport_archer_rounds"

            >
            <CheckBox
                android:id="@+id/RadioArrow"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:layout_marginStart="20dp"

                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:text="@string/nameArrow"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />




            <EditText
                android:id="@+id/pointageOffset"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:autofillHints="2"
                android:background="@drawable/it_style"
                android:ems="1"
                android:hint="2"
                android:inputType="number"
                android:singleLine="true"
                android:text="2"

                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/RadioArrow"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:id="@+id/TextOffset"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"

                android:gravity="center"
                android:text="@string/pointageOffsetDesc"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintLeft_toRightOf="@id/TextOffset"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/pointageOffsetDesc" />

        </TableRow>

        <TableRow
            android:id="@+id/table_am_bexport_archer_rounds"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/table_am_pointage_offset"
            app:layout_constraintBottom_toTopOf="@id/am_table_bexport_round_archers"
            >

            <Button
                android:id="@+id/am_bexport_archer_rounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="2"
                android:background="@drawable/am_buttonshape_grey"
                android:text="@string/am_bexport_archer_round"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>

        <TableRow
            android:id="@+id/am_table_bexport_round_archers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/am_table_bexport_round_archers"
            app:layout_constraintBottom_toTopOf="@id/table_progressBar">

            <Button
                android:id="@+id/am_bexport_round_archers"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="2"
                android:background="@drawable/am_buttonshape_grey"
                android:text="@string/am_bexport_round_archers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>

        <TableRow
            android:id="@+id/am_table_bexport_round_archer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/am_table_bexport_round_archers"
            app:layout_constraintBottom_toTopOf="@id/table_progressBar"
            >

            <Button
                android:id="@+id/am_bexport_round_archer"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="2"
                android:background="@drawable/am_buttonshape_grey"
                android:text="@string/am_bexport_round_archer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </TableRow>

        <TableRow
            android:id="@+id/table_progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/am_table_bexport_round_archer"
            app:layout_constraintBottom_toTopOf= "@id/am_table_gridFilter">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="41dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ProgressBar
                android:id="@+id/am_progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:indeterminate="false"
                android:max="100"
                android:visibility="invisible"

     />


        </TableRow>
        <TableRow
            android:id="@+id/am_table_gridFilter"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/table_progressBar"
            app:layout_constraintBottom_toBottomOf="parent">
            <GridView
                android:id="@+id/r_maintenance_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/resRoundFilter"
                android:autofillHints=""
                android:inputType="text"
                android:layout_marginTop="4dp"
                android:columnWidth="60dp"
                android:gravity="center"
                android:horizontalSpacing="5dp"
                android:numColumns="4"
                android:verticalSpacing="2dp"


                />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

