<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Config_round">


    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bLetGo"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="Go to round"
            android:text="@string/let_sgo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/IRoundName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:ems="10"
            android:hint="@string/roundName"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@id/bLetGo"
            app:layout_constraintTop_toTopOf="parent" />


    </TableRow>

    <TableRow
        android:id="@+id/tableRow11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tableRow1"
        android:layout_weight="10"
        app:layout_constraintLeft_toLeftOf="@id/tableRow1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow1">


        <EditText
            android:id="@+id/INumberArrow"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toEndOf="@+id/IRoundName"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/INumberEndByRound"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toEndOf="@+id/INumberArrow"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/newArcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:contentDescription="Name of new archer"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:lines="1"
            app:layout_constraintStart_toEndOf="@id/INumberEndByRound"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/bAddArcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="add archer to base"
            android:text="@string/addArcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/newArcher"
            app:layout_constraintTop_toTopOf="parent" />


    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/tableRow11"
        android:layout_weight="40"
        app:layout_constraintBottom_toTopOf="@+id/tableRow3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow11">

        <TextView
            android:id="@+id/textView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Archer" />

        <ListView
            android:id="@+id/archersBase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"

            android:background="#DAB3B3">


        </ListView>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ArcherToRound" />

        <ListView
            android:id="@+id/archersRound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="#BCB5B5">


        </ListView>
    </TableRow>


</androidx.constraintlayout.widget.ConstraintLayout>